@@ -220,11 +220,11 @@ FINAUD_FREQUENCY="300"
 ###############################################################################
 #
 # Maximum of seconds used by a scheduler
-SCHEDULER_TIMEOUT="10"
+SCHEDULER_TIMEOUT="30"
 
 # Number of processes to use when performing scheduling calculations
 # (default is 1)
-#SCHEDULER_NB_PROCESSES=4
+SCHEDULER_NB_PROCESSES=4
 
 # Time to add between each jobs (for example: time for administration tasks or
 # time to let computers to reboot)
@@ -292,7 +292,7 @@ SCHEDULER_AVAILABLE_SUSPENDED_RESOURCE_TYPE="default"
 #
 # Specify the number of job to take care at each time
 # Default is 30
-#SCHEDULER_FAIRSHARING_MAX_JOB_PER_USER=30
+SCHEDULER_FAIRSHARING_MAX_JOB_PER_USER=30
 
 # Number of seconds to consider for the fairsharing
 # Default is 30 days
